--- a/index.html
+++ b/index.html
@@ -60,24 +60,24 @@
                 <input type="number" id="interestRate" value="3.5" step="0.01" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
             </div>
 
-            <div>
-                <label for="loanTerm" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Loan Term (Years)</label>
-                <input type="number" id="loanTerm" value="30" min="1" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
+            <div class="flex space-x-1 sm:space-x-2"> <div class="flex-1"> <label for="loanTerm" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Loan Term (Yrs)</label>
+                    <input type="number" id="loanTerm" value="30" min="1" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
+                </div>
+                <div class="flex-1">
+                    <label for="downPayment" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Down Payment (%)</label>
+                    <input type="number" id="downPayment" value="20" min="0" max="100" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
+                </div>
             </div>
 
-            <div>
-                <label for="downPayment" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Down Payment (%)</label>
-                <input type="number" id="downPayment" value="20" min="0" max="100" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
-            </div>
-
-            <div>
-                <label for="homeInsurance" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Home Insurance (Monthly $)</label>
-                <input type="number" id="homeInsurance" value="100" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
-            </div>
-
-            <div>
-                <label for="hoa" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">HOA (Monthly $)</label>
-                <input type="number" id="hoa" value="50" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
+            <div class="flex space-x-1 sm:space-x-2">
+                <div class="flex-1">
+                    <label for="homeInsurance" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Home Insurance ($)</label>
+                    <input type="number" id="homeInsurance" value="100" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
+                </div>
+                <div class="flex-1">
+                    <label for="hoa" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">HOA ($)</label>
+                    <input type="number" id="hoa" value="50" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
+                </div>
             </div>
 
             <div>
