--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mortgage Calculator</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         /* Custom font for better aesthetics */
         body {
@@ -46,63 +47,72 @@
     </style>
 </head>
 <body class="bg-gradient-to-br from-blue-100 to-purple-100 min-h-screen flex items-center justify-center p-1 sm:p-2">
-    <div class="bg-white p-2 sm:p-4 rounded-xl shadow-2xl w-full max-w-xs sm:max-w-md border border-gray-200">
-        <h1 class="text-xl sm:text-2xl font-extrabold text-gray-800 mb-2 sm:mb-4 text-center">Mortgage Calculator</h1>
+    <div class="bg-white p-2 sm:p-4 rounded-xl shadow-2xl w-full max-w-full md:max-w-4xl lg:max-w-5xl flex flex-col md:flex-row items-start md:items-stretch space-y-4 md:space-y-0 md:space-x-4">
 
-        <div class="space-y-1 sm:space-y-2">
-            <div>
-                <label for="principal" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Principal Loan Amt ($)</label>
-                <input type="number" id="principal" value="300000" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
-            </div>
+        <div class="w-full md:w-1/2 flex flex-col">
+            <h1 class="text-xl sm:text-2xl font-extrabold text-gray-800 mb-2 sm:mb-4 text-center">Mortgage Calculator</h1>
 
-            <div>
-                <label for="interestRate" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Annual Interest Rate (%)</label>
-                <input type="number" id="interestRate" value="3.5" step="0.01" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
-            </div>
-
-            <div class="flex space-x-1 sm:space-x-2"> <div class="flex-1"> <label for="loanTerm" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Loan Term (Yrs)</label>
-                    <input type="number" id="loanTerm" value="30" min="1" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
+            <div class="space-y-1 sm:space-y-2 flex-grow"> <div>
+                    <label for="principal" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Principal Loan Amt ($)</label>
+                    <input type="number" id="principal" value="300000" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
                 </div>
-                <div class="flex-1">
-                    <label for="downPayment" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Down Payment (%)</label>
-                    <input type="number" id="downPayment" value="20" min="0" max="100" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
+
+                <div>
+                    <label for="interestRate" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Annual Interest Rate (%)</label>
+                    <input type="number" id="interestRate" value="3.5" step="0.01" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
+                </div>
+
+                <div class="flex space-x-1 sm:space-x-2">
+                    <div class="flex-1">
+                        <label for="loanTerm" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Loan Term (Yrs)</label>
+                        <input type="number" id="loanTerm" value="30" min="1" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
+                    </div>
+                    <div class="flex-1">
+                        <label for="downPayment" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Down Payment (%)</label>
+                        <input type="number" id="downPayment" value="20" min="0" max="100" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
+                    </div>
+                </div>
+
+                <div class="flex space-x-1 sm:space-x-2">
+                    <div class="flex-1">
+                        <label for="homeInsurance" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Home Insurance ($)</label>
+                        <input type="number" id="homeInsurance" value="100" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
+                    </div>
+                    <div class="flex-1">
+                        <label for="hoa" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">HOA ($)</label>
+                        <input type="number" id="hoa" value="50" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
+                    </div>
+                </div>
+
+                <div>
+                    <label for="propertyTax" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Property Tax (Half-Yearly $)</label>
+                    <input type="number" id="propertyTax" value="2400" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
                 </div>
             </div>
 
-            <div class="flex space-x-1 sm:space-x-2">
-                <div class="flex-1">
-                    <label for="homeInsurance" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Home Insurance ($)</label>
-                    <input type="number" id="homeInsurance" value="100" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
-                </div>
-                <div class="flex-1">
-                    <label for="hoa" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">HOA ($)</label>
-                    <input type="number" id="hoa" value="50" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
-                </div>
-            </div>
-
-            <div>
-                <label for="propertyTax" class="block text-xxs sm:text-xs font-medium text-gray-700 mb-0">Property Tax (Half-Yearly $)</label>
-                <input type="number" id="propertyTax" value="2400" min="0" class="w-full p-1 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out text-sm">
-            </div>
-
-            <button id="calculateBtn" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-1 sm:py-2 px-3 rounded-lg shadow-md transition duration-300 ease-in-out transform hover:scale-105 text-sm sm:text-base">
+            <button id="calculateBtn" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-1 sm:py-2 px-3 rounded-lg shadow-md transition duration-300 ease-in-out transform hover:scale-105 text-sm sm:text-base mt-2 sm:mt-4">
                 Calculate Mortgage
             </button>
-        </div>
 
-        <div id="results" class="mt-2 sm:mt-4 p-2 sm:p-4 bg-blue-50 rounded-xl border border-blue-200 hidden">
-            <h2 class="text-base sm:text-lg font-semibold text-gray-800 mb-1 sm:mb-2 text-center">Your Estimated Monthly Payment:</h2>
-            <p class="text-2xl sm:text-3xl font-extrabold text-blue-700 text-center mb-1 sm:mb-2" id="monthlyPaymentResult">$0.00</p>
-            <div class="text-xxs sm:text-xs text-gray-600 space-y-0.5">
-                <p><span class="font-medium">P&I:</span> <span id="pAndIResult"></span></p>
-                <p><span class="font-medium">Insurance:</span> <span id="insuranceResult"></span></p>
-                <p><span class="font-medium">HOA:</span> <span id="hoaResult"></span></p>
-                <p><span class="font-medium">Tax (Monthly):</span> <span id="taxResult"></span></p>
+            <div id="errorMessage" class="mt-2 sm:mt-4 p-2 sm:p-3 bg-red-100 text-red-700 rounded-lg hidden text-xs">
+                Please fill in all fields with valid positive numbers.
             </div>
         </div>
 
-        <div id="errorMessage" class="mt-2 sm:mt-4 p-2 sm:p-3 bg-red-100 text-red-700 rounded-lg hidden text-xs">
-            Please fill in all fields with valid positive numbers.
+        <div class="w-full md:w-1/2 flex flex-col justify-center">
+            <div id="results" class="p-2 sm:p-4 bg-blue-50 rounded-xl border border-blue-200 hidden">
+                <h2 class="text-base sm:text-lg font-semibold text-gray-800 mb-1 sm:mb-2 text-center">Your Estimated Monthly Payment:</h2>
+                <p class="text-2xl sm:text-3xl font-extrabold text-blue-700 text-center mb-1 sm:mb-2" id="monthlyPaymentResult">$0.00</p>
+                <div class="text-xxs sm:text-xs text-gray-600 space-y-0.5">
+                    <p><span class="font-medium">P&I:</span> <span id="pAndIResult"></span></p>
+                    <p><span class="font-medium">Insurance:</span> <span id="insuranceResult"></span></p>
+                    <p><span class="font-medium">HOA:</span> <span id="hoaResult"></span></p>
+                    <p><span class="font-medium">Tax (Monthly):</span> <span id="taxResult"></span></p>
+                </div>
+
+                <div class="mt-4 sm:mt-6 flex justify-center">
+                    <canvas id="mortgagePieChart" class="w-full h-[200px] sm:h-[250px]"></canvas> </div>
+            </div>
         </div>
     </div>
 
@@ -123,6 +133,9 @@
         const hoaResult = document.getElementById('hoaResult');
         const taxResult = document.getElementById('taxResult');
         const errorMessageDiv = document.getElementById('errorMessage');
+
+        // Chart.js instance variable
+        let mortgageChart;
 
         /**
          * Formats a number as a currency string.
@@ -165,6 +178,86 @@
             const numerator = monthlyInterestRate * Math.pow((1 + monthlyInterestRate), numberOfPayments);
             const denominator = Math.pow((1 + monthlyInterestRate), numberOfPayments) - 1;
             return loanAmount * (numerator / denominator);
+        }
+
+        /**
+         * Updates or creates the pie chart with the given data.
+         * @param {number} pAndI - Monthly Principal & Interest payment.
+         * @param {number} insurance - Monthly Home Insurance payment.
+         * @param {number} hoa - Monthly HOA payment.
+         * @param {number} tax - Monthly Property Tax payment.
+         */
+        function updatePieChart(pAndI, insurance, hoa, tax) {
+            const ctx = document.getElementById('mortgagePieChart').getContext('2d');
+
+            // Data for the pie chart
+            const chartData = {
+                labels: ['P&I', 'Insurance', 'HOA', 'Property Tax'],
+                datasets: [{
+                    data: [pAndI, insurance, hoa, tax],
+                    backgroundColor: [
+                        'rgba(59, 130, 246, 0.8)', // Blue for P&I
+                        'rgba(16, 185, 129, 0.8)', // Green for Insurance
+                        'rgba(245, 158, 11, 0.8)',  // Orange for HOA
+                        'rgba(239, 68, 68, 0.8)'   // Red for Property Tax
+                    ],
+                    borderColor: [
+                        'rgba(59, 130, 246, 1)',
+                        'rgba(16, 185, 129, 1)',
+                        'rgba(245, 158, 11, 1)',
+                        'rgba(239, 68, 68, 1)'
+                    ],
+                    borderWidth: 1
+                }]
+            };
+
+            // Chart options for responsiveness and legend placement
+            const chartOptions = {
+                responsive: true,
+                maintainAspectRatio: false, // Allow canvas to resize freely
+                plugins: {
+                    legend: {
+                        position: 'bottom', // Place legend below the chart
+                        labels: {
+                            font: {
+                                size: 10 // Smaller font for legend labels on mobile
+                            }
+                        }
+                    },
+                    tooltip: {
+                        callbacks: {
+                            label: function(context) {
+                                let label = context.label || '';
+                                if (label) {
+                                    label += ': ';
+                                }
+                                if (context.parsed !== null) {
+                                    label += formatCurrency(context.parsed);
+                                }
+                                return label;
+                            }
+                        },
+                        titleFont: {
+                            size: 10 // Smaller tooltip title font
+                        },
+                        bodyFont: {
+                            size: 10 // Smaller tooltip body font
+                        }
+                    }
+                }
+            };
+
+            // Destroy existing chart instance if it exists to prevent overlap
+            if (mortgageChart) {
+                mortgageChart.destroy();
+            }
+
+            // Create new chart instance
+            mortgageChart = new Chart(ctx, {
+                type: 'pie',
+                data: chartData,
+                options: chartOptions
+            });
         }
 
         /**
@@ -217,6 +310,9 @@
             insuranceResult.textContent = formatCurrency(homeInsurance);
             hoaResult.textContent = formatCurrency(hoa);
             taxResult.textContent = formatCurrency(monthlyPropertyTax);
+
+            // Update and display the pie chart
+            updatePieChart(monthlyPAndI, homeInsurance, hoa, monthlyPropertyTax);
 
             // Show the results section
             resultsDiv.classList.remove('hidden');
