--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         }
     </style>
 </head>
-<body class="bg-gradient-to-br from-blue-100 to-purple-100 min-h-screen p-1 sm:p-2 flex flex-col items-center">
-    <div class="bg-white p-2 sm:p-4 rounded-xl shadow-2xl w-full max-w-full md:max-w-4xl lg:max-w-5xl flex flex-col md:flex-row items-start md:items-stretch space-y-4 md:space-y-0 md:space-x-4">
+<body class="bg-gradient-to-br from-blue-100 to-purple-100 min-h-screen p-1 sm:p-2 flex flex-col items-center justify-start">
+    <div class="bg-white p-2 sm:p-4 rounded-xl shadow-2xl w-full max-w-full md:max-w-4xl lg:max-w-5xl flex flex-col md:flex-row items-start md:items-stretch space-y-4 md:space-y-0 md:space-x-4 mx-auto">
 
         <div class="w-full md:w-1/2 flex flex-col">
             <h1 class="text-xl sm:text-2xl font-extrabold text-gray-800 mb-2 sm:mb-4 text-center">Mortgage Calculator</h1>
@@ -144,7 +144,7 @@
             </div>
         </div>
 
-        <div id="amortizationScheduleContainer" class="bg-white p-2 sm:p-4 rounded-xl shadow-2xl w-full max-w-full md:max-w-4xl lg:max-w-5xl mt-4 hidden">
+        <div id="amortizationScheduleContainer" class="bg-white p-2 sm:p-4 rounded-xl shadow-2xl w-full max-w-full md:max-w-4xl lg:max-w-5xl mt-4 hidden mx-auto">
             <h2 class="text-xl sm:text-2xl font-extrabold text-gray-800 mb-4 text-center">Amortization Schedule</h2>
             <div class="overflow-x-auto">
                 <table class="w-full text-xxs sm:text-xs border-collapse amortization-table">
